--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,37 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-dill
-flask
+blinker==1.6.2
+catboost==1.2
+click==8.1.5
+colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
+dill==0.3.6
+Flask==2.3.2
+fonttools==4.40.0
+graphviz==0.20.1
+importlib-metadata==6.8.0
+importlib-resources==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.1
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+numpy==1.24.4
+packaging==23.1
+pandas==2.0.3
+Pillow==10.0.0
+plotly==5.15.0
+pyparsing==3.1.0
+python-dateutil==2.8.2
+pytz==2023.3
+scikit-learn==1.3.0
+scipy==1.10.1
+seaborn==0.12.2
+six==1.16.0
+tenacity==8.2.2
+threadpoolctl==3.1.0
+tzdata==2023.3
+Werkzeug==2.3.6
+xgboost==1.7.6
+zipp==3.15.0
 # -e .
